--- a/styles.css
+++ b/styles.css
@@ -81,13 +81,12 @@ body {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow: hidden;
-  border-radius: 16px;
+  border-radius: 12px;
   box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
 }
 
 .chance__face--front {
-  background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
-  display: flex;
+  background-color: RGBA(47,122,75,1);
   align-items: center;
   justify-content: center;
 }
@@ -95,6 +94,13 @@ body {
 .chance__face--front h2 {
   color: #FFF;
   font-size: 16px;
+  text-align: center;
+  margin-top:  25px;
+}
+
+.chance__face--front img {
+  margin-left: 43px;
+  height: 100px;
 }
 
 .chance__face--back {
@@ -109,7 +115,7 @@ body {
 
 .chance__header {
   position: relative;
-  padding: 30px 30px 40px;
+  padding: 10px 10px 20px;
 }
 
 .chance__header:after {
@@ -120,46 +126,32 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to bottom left, var(--primary) 10%, var(--secondary) 115%);
+  background-color: RGBA(47,122,75,1);
   z-index: -1;
-  border-radius: 0px 0px 50% 0px;
+  border-radius: 0px 0px 30% 0px;
 }
 
-.pp {
-  display: block;
-  width: 128px;
-  height: 128px;
-  margin: 0 auto 30px;
-  border-radius: 50%;
-  background-color: #FFF;
-  border: 5px solid #FFF;
-  object-fit: cover;
-}
 
 .chance__header h2 {
   color: #FFF;
-  font-size: 18px;
+  font-size: 5px;
   font-weight: 900;
   text-transform: uppercase;
   text-align: center;
+  padding-top:10px;
 }
 
 .chance__body {
-  padding: 30px;
-}
-
-.chance__body h3 {
-  color: var(--dark);
-  font-size: 12px;
-  font-weight: 600;
-  margin-bottom: 15px;
+  padding: 10px;
 }
 
 .chance__body p {
   color: var(--dark);
-  font-size: 10px;
-  line-height: 1.4;
+  font-size: 8px;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
+
 
 .chest {
   margin: 20px auto 0;
@@ -191,20 +183,26 @@ body {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow: hidden;
-  border-radius: 16px;
+  border-radius: 12px;
   box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
 }
 
 .chest__face--front {
-  background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
-  display: flex;
+  background-color: RGBA(41,123,174,1);
   align-items: center;
   justify-content: center;
 }
 
 .chest__face--front h2 {
   color: #FFF;
+  text-align: center;
   font-size: 16px;
+  margin-top: 20px;
+}
+
+.chest__face--front img {
+  margin-left: 12px;
+  height: 90px;
 }
 
 .chest__face--back {
@@ -219,7 +217,7 @@ body {
 
 .chest__header {
   position: relative;
-  padding: 30px 30px 40px;
+  padding: 30px 10px 30px;
 }
 
 .chest__header:after {
@@ -230,46 +228,31 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to bottom left, var(--primary) 10%, var(--secondary) 115%);
+  background-color: RGBA(41,123,174,1);
   z-index: -1;
-  border-radius: 0px 0px 50% 0px;
+  border-radius: 0px 0px 30% 0px;
 }
 
-.pp {
-  display: block;
-  width: 128px;
-  height: 128px;
-  margin: 0 auto 30px;
-  border-radius: 50%;
-  background-color: #FFF;
-  border: 5px solid #FFF;
-  object-fit: cover;
-}
 
 .chest__header h2 {
   color: #FFF;
-  font-size: 32px;
-  font-weight: 900;
+  font-size: 5px;
+  font-weight: 600;
   text-transform: uppercase;
   text-align: center;
 }
 
 .chest__body {
-  padding: 30px;
-}
-
-.chest__body h3 {
-  color: var(--dark);
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 15px;
+  padding: 10px;
 }
 
 .chest__body p {
   color: var(--dark);
-  font-size: 18px;
-  line-height: 1.4;
+  font-size: 8px;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
+
 
 .set {
   display: flex;
@@ -471,12 +454,21 @@ button:hover {
   }
 }
 
+.calcset h {
+  display: block;
+  text-align: center;
+  color: #FF0509;
+  font-size: 20px;
+  font-weight: 500;
+}
+
 .container {
   background: #fff;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.2);
   border-radius: 14px;
   padding-bottom: 20px;
   width: 320px;
+  height: 360px;
   
  }
  .display {
@@ -488,7 +480,7 @@ button:hover {
   border-top-right-radius: 14px;
  }
  .buttons {
-  padding: 20px 20px 0 20px;
+  padding: 10px 20px 20px;
  }
  .row {
   width: 280px;
